feat(skills): deepen all 469 skills to 400+ lines, generate master summary